--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,12 @@
 
 <!--<script src="service-worker.js"></script>-->
 <script src="js/jquery.min.js" type="text/javascript" ></script>
-<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=GkPIRjNz1LGH6pnrYWZCU2pwIW4O6y8u"></script>
+<!--<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=GkPIRjNz1LGH6pnrYWZCU2pwIW4O6y8u"></script>-->
 <script src="https://cdn.bootcss.com/echarts/4.2.0-rc.2/echarts.min.js"></script>
 <!--<script src="https://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>-->
-<script src="https://echarts.baidu.com/gallery/vendors/echarts/map/js/world.js"></script>
+<!--<script src="https://echarts.baidu.com/gallery/vendors/echarts/map/js/world.js"></script>-->
 <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.min.js"></script>
-<script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/extension/bmap.min.js" async></script>
+<!--<script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/extension/bmap.min.js" async></script>-->
 <!--<script src="https://cdn.bootcss.com/rxjs/6.0.0-alpha.3/Rx.min.js" async></script>-->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.2.0-rc.1/echarts.min.js" integrity="sha256-tbD/7UGwP5fpkLnJwdevrUNMOI0TC4Is241C15Fgx3w=" crossorigin="anonymous"></script>-->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>-->
